objects/OCR_Audit__c.object
<CustomObject>
    <description>Opportunity Close Ratio Audits</description>
    <fields>
        <fullName>Close_Ratio__c</fullName>
        <description>Opportunity close Ratio</description>
        <label>Close Ratio</label>
        <precision>6</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won__c</fullName>
        <description>Closed Won Opportunities</description>
        <label>Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to Partner Account</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OCR Audits</relationshipLabel>
        <relationshipName>OCR_Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Date__c</fullName>
        <label>Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Opportunities__c</fullName>
        <description>Total number of Opportunities in Rolling Year</description>
        <label>Total Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OCR Audit</label>
    <nameField>
        <label>OCR Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCR Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>